# keti-osi-grpc

./: .gitmodules  LICENSE  README.md  run_interface.sh
src/async_stream/: CMakeLists.txt  package.xml  setup.py
src/async_stream/cmake/: common.cmake
src/async_stream/include/: hdmap.h  hdmap_common.h  hdmap_ngii.h  path_point.pb.h
src/async_stream/include/common/: common_info.h  driveway_section_info.h  height_barrier_info.h  intersection_info.h  lane_info.h  link_info.h  macros.h  node_info.h  parking_lot_info.h  postpoint_info.h  safetysign_info.h  speedbump_info.h  stop_info.h  subsidiary_section_info.h  surfacemark_info.h  trafficlight_info.h  vehicle_protection_safety_info.h
src/async_stream/include/control_msgs/: VehicleCMD.h  VehicleState.h
src/async_stream/include/conversion/coordinate/: tm_conversion.h  utm_conversion.h
src/async_stream/include/cyber_common_msgs/: ErrorCode.h  Header.h  Point3D.h  StatusPb.h
src/async_stream/include/cyber_perception_msgs/: BBox2D.h  CIPVInfo.h  LaneBoundaryType.h  LaneMarker.h  LaneMarkers.h  LaneType.h  LightStatus.h  ObstacleSubType.h  ObstacleType.h  PerceptionObstacle.h  PerceptionObstacles.h  SensorMeasurement.h  SourceType.h  V2XType.h
src/async_stream/include/math/: aabox2d.h  aaboxkdtree2d.h  box2d.h  line_segment2d.h  math_utils.h  polygon2d.h  vec2d.h  vec3d.h
src/async_stream/include/perception_msgs/: TrafficLight.h  TrafficLights.h  TrafficSignalPhase.h
src/async_stream/protos/: sensorview_rpc.proto
src/async_stream/protos/apollo_proto/: apollo_chassis.proto  apollo_control_cmd.proto  apollo_corimu.proto  apollo_gnss_best_pose.proto  apollo_gps.proto  apollo_header.proto  apollo_imu.proto  apollo_input_debug.proto  apollo_ins.proto  apollo_map_geometry.proto  apollo_map_lane.proto  apollo_monitor_log.proto  apollo_pad_msg.proto  apollo_perception_obstacle.proto  apollo_pose.proto  apollo_sensor_image.proto  apollo_traffic_light_detection.proto  apollo_vehicle_config.proto  apollo_velodyne.proto
src/async_stream/src/: apollo_ros_bridge.cc  apollo_ros_bridge.h  apollo_ros_converter.cc  apollo_ros_converter.h  async_streaming_client.cc  async_streaming_client_lidar.cc  async_streaming_server.cc  async_streaming_server_lidar.cc  autoware_ros_bridge.cc  autoware_ros_bridge.h  autoware_ros_converter.cc  autoware_ros_converter.h  keti_ros_bridge.cc  keti_ros_bridge.h  keti_ros_converter.cc  keti_ros_converter.h  libwrapper.cpp  libwrapper_csharp.cpp  libwrapper_csharp.h  morai_ros_bridge.cc  morai_ros_bridge.h  osi_bridge.cc  osi_bridge.h  osi_bridge_main.cc  osi_bridge_main_python.py  osi_client.cc  osi_client.h  osi_server.cc  osi_server.h  osmp_test.cpp
src/async_stream/src/OSMPDummySensor/: OSMPDummySensor.cpp  OSMPDummySensor.h
src/async_stream/src/OSMPDummySensor/lidar/: osmp_lidar.cpp  osmp_lidar.h
src/async_stream/src/client_csharp/: osi_bridge_main_csharp.cs
src/async_stream/src/config/: config.yaml  param_set.yaml
src/async_stream/src/launch/: async_streaming_client_lidar.launch  async_streaming_server_lidar.launch  osi_client.launch  osi_grpc.launch  param_set.launch
src/async_stream/src/matching_table/: id_matching_test.csv  morai_to_osi_matching_obj.csv  morai_to_osi_matching_obj_2.csv  morai_to_osi_matching_tl.csv  osi_to_keti_matching_tl.csv  v2x_matching.csv
src/async_stream/src/task/: task.h  task_manager.cpp  task_manager.h
src/async_stream/src/utils/: apollo_bridge_buffer.cc  apollo_bridge_header.cc  apollo_bridge_header.h  apollo_bridge_proto_diserialized_buf.h  apollo_bridge_proto_serialized_buf.h  apollo_macro.h  apollo_udp_bridge_receiver_component.cc  apollo_udp_bridge_receiver_component.h  apollo_udp_listener.h  apollo_util.h  sensor_data_osi_converter.cpp  sensor_data_osi_converter.h  string_utils.h
